коррекция имен файлов актеров

--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
     <!--? "progressbar" "scroll-path"-->
     <div class="progressbar" id="progressbar"></div>
     <div class="scroll-path"></div>
-    <!--! "iframe-box" Box с видео -->
-    <!--! "iframe-box" Box с видео -->
+
     <!--! "iframe-box" Box с видео -->
     <!-- youtube_box.css -->
     <div class="popup-viideo">
@@ -153,7 +152,7 @@
 
           <!-- <div class="box-wrape"> -->
           <div class="circle circle-right">
-            <img src="./troupe/_Люба  Дворкин-Админдиректор.jpg" alt="фото актера" />
+            <img src="./troupe/люба_дворкин.jpg" alt="фото актера" />
           </div>
           <!-- <h3>Люба Дворкин-Админдиректор</h3> -->
           <p>
