--- a/troupe.html
+++ b/troupe.html
@@ -104,7 +104,7 @@
           </div>
           <div class="box-wrape">
             <div class="circle circle-right">
-              <img src="./troupe/_Люба  Дворкин-Админдиректор.jpg" alt="фото актера" />
+              <img src="./troupe/люба_дворкин.jpg" alt="фото актера" />
             </div>
             <h3>Люба Дворкин-Админдиректор</h3>
             <p>
@@ -192,7 +192,7 @@
           </div>
           <div class="card">
             <div class="poster">
-              <img src="./troupe/_Таня Дьяченко.jpg" alt=" фото актера" />
+              <img src="./troupe/таня_дьяченко.jpg" alt=" фото актера" />
             </div>
             <div class="details">
               <h3>Таня Дьяченко</h3>
@@ -210,7 +210,7 @@
           </div>
           <div class="card">
             <div class="poster">
-              <img src="./troupe/_Соня Полойко.jpg" alt="фото актера" />
+              <img src="./troupe/соня_полойко.jpg" alt="фото актера" />
             </div>
             <div class="details">
               <h3>Соня Полойко</h3>
@@ -255,7 +255,7 @@
           </div>
           <div class="card">
             <div class="poster">
-              <img src="./troupe/_Элона Ослон.jpg" alt="фото актера" />
+              <img src="./troupe/элона_ослон.jpg" alt="фото актера" />
             </div>
             <div class="details">
               <h3>Илона Ослон</h3>
@@ -377,7 +377,7 @@
         <div class="content">
           <div class="card">
             <div class="poster">
-              <img src="./troupe/_Яна Макарова.jpg" alt="фото актера" />
+              <img src="./troupe/яна_макарова.jpg" alt="фото актера" />
             </div>
             <div class="details">
               <h3>Яна Макарова</h3>
