--- a/index.html
+++ b/index.html
@@ -70,22 +70,22 @@
         </div>
 
         <ul class="glass">
-          <li style="--clr: #1eb1de"><a href="#about" data-text="О нас">О нас</a></li>
-          <li style="--clr: #d35178">
+          <li style="--clr: #dbce00"><a href="#about" data-text="О нас">О нас</a></li>
+          <li style="--clr: #ef8e06">
             <a href="./repertoire.html#repertoire" data-text="Репертуар">Репертуар</a>
             <ul class="glass">
-              <li style="--clr: #feb47b"><a href="./repertoire.html#repertoire" data-text="Спектакли">Спектакли</a></li>
-              <li style="--clr: #feb47b">
+              <li style="--clr: #e74505"><a href="./repertoire.html#repertoire" data-text="Спектакли">Спектакли</a></li>
+              <li style="--clr: #e71f05">
                 <a href="./repertoire.html#children" data-text="Шоу для детей">Шоу для детей</a>
               </li>
             </ul>
           </li>
-          <li style="--clr: #feb47b"><a href="./troupe.html#troupe" data-text="Труппа">Труппа</a></li>
-          <li style="--clr: #9e7923">
+          <li style="--clr: #e74505"><a href="./troupe.html#troupe" data-text="Труппа">Труппа</a></li>
+          <li style="--clr: #e71f05">
             <a href="./festivals.html#festivals" data-text="Фестивали">Фестивали</a>
           </li>
-          <li style="--clr: #ff7e5f"><a href=" #testimonials" data-text="Отзывы">Отзывы</a></li>
-          <li style="--clr: #7f7fd5"><a href=" #contact" data-text="Контакты">Контакты</a></li>
+          <li style="--clr: #e75405"><a href=" #testimonials" data-text="Отзывы">Отзывы</a></li>
+          <li style="--clr: #e7b605"><a href=" #contact" data-text="Контакты">Контакты</a></li>
         </ul>
       </nav>
     </header>
