устранения проблемы  белых полей (сверху, справа и снизу) на мобильных и планшетных устройствах

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <link rel="icon" href="./img/favicon_ашклон.ico" type="image/x-icon" />
     <link rel="shortcut icon" href="./img/favicon_ашклон.ico" type="image/x-icon" />
     <title>Театр Драмы и Комедии им.В.Азарова г.Ашкелон</title>
@@ -375,9 +376,9 @@
           </form>
         </div>
       </div>
-      <div class="copyright-text">
+      <!-- <div class="copyright-text">
         <p>Copyright text 2025 <a href="#">Tetiana</a></p>
-      </div>
+      </div> -->
     </section>
     <!-- ! Открытие видео "adressMap" -->
     <script type="text/javascript">
