.navbar-brand .logo-tbut

--- a/index.html
+++ b/index.html
@@ -379,6 +379,15 @@
       <!-- <div class="copyright-text">
         <p>Copyright text 2025 <a href="#">Tetiana</a></p>
       </div> -->
+      <footer>
+        <a
+          class="navbar-brand logo-tbut"
+          href="https://www.shecodes.io/graduates/93245-tetiana-butok"
+          title="SheCodes Profile"
+          target="_blank"
+          >Tetiana Butok</a
+        >
+      </footer>
     </section>
     <!-- ! Открытие видео "adressMap" -->
     <script type="text/javascript">
