responive .about .repertoire

--- a/index.html
+++ b/index.html
@@ -130,23 +130,23 @@
           <h3>Владимир Яковлевич Азаров - создатель и режиссер театра 1991-2018гг.</h3>
           <p>
             <br />
-            Добрый день , дорогие друзья ! Театр драмы и комедии из города Ашкелон, выросший на берегу прекрасного
-            Средиземного моря в самой замечательной и любимой нами стране Израиль, имеет символичное называние "
-            Менора". По еврейской традиции менора - это подсвечник, в котором зажигают праздничные свечи , несущий людям
-            свет. И зажег этот светильник удивительный человек Владимир Яковлевич Азаров , создавший в 1991 году
-            самодеятельный театр , в котором играли потом его ученики, его артисты, его друзья и его птенцы...Владимир
-            Яковлевич был всем : столяром, плотником, маляром , звукооператором , актером и , конечно, режиссером. За 27
-            лет его службы Мельпомене, " Менора" показал зрителям более 25 спектаклей и, 15 утренников для детей. Долгое
-            время театр работал в крошечном бомбоубежище , куда вплотную набивались зрители. Стал гордостью Ашкелона,
-            нес в народ высокую степень культуры и интеллекта, неоднократно награждался почетными грамотами и заслужил
-            признание публики. Вниманию публики были представлены пьесы русских, израильских и зарубежных авторов : "
-            Три красавицы" ( В. Красногоров) ," Громкое имя" ( Эфраима Кешона) , "Восемь любящих женщин ( Робера Тома )
-            и многие другие. Родители и дети спешили на все детские утренники , которые предлагал им театр : "
-            Новогоднюю сказку" , Волшебное слово " , " Баба Яга против" ... всех не перечесть... выступления проходили
-            как и в родном Ашкелоне , так и в других городах страны : Бат Яме , Нетании , Петах Тикве , Офаким и др. Со
-            временем город взял над театром шефство . Первая заместитель мэра .г. Софа Бейлин добилась для театра
-            постоянного места в Бейт А-Ам.(Здание старенькое , но - настоящий театр : со сценой и занавесом), а потом и
-            статуса " Ашкелонский Городской драматический театр " Менора" .
+            Добрый день, дорогие друзья! Театр драмы и комедии из города Ашкелон, выросший на берегу прекрасного
+            Средиземного моря в самой замечательной и любимой нами стране Израиль, имеет символичное называние "Менора".
+            По еврейской традиции менора - это подсвечник, в котором зажигают праздничные свечи , несущий людям свет. И
+            зажег этот светильник удивительный человек Владимир Яковлевич Азаров, создавший в 1991 году самодеятельный
+            театр, в котором играли потом его ученики, его артисты, его друзья и его птенцы...Владимир Яковлевич был
+            всем: столяром, плотником, маляром, звукооператором, актером и, конечно, режиссером. За 27 лет его службы
+            Мельпомене, "Менора" показал зрителям более 25 спектаклей и, 15 утренников для детей. Долгое время театр
+            работал в крошечном бомбоубежище, куда вплотную набивались зрители. Стал гордостью Ашкелона, нес в народ
+            высокую степень культуры и интеллекта, неоднократно награждался почетными грамотами и заслужил признание
+            публики. Вниманию публики были представлены пьесы русских, израильских и зарубежных авторов: "Три красавицы"
+            (В.Красногоров), "Громкое имя" (Эфраима Кешона), "Восемь любящих женщин" (Робера Тома) и многие другие.
+            Родители и дети спешили на все детские утренники, которые предлагал им театр: "Новогоднюю сказку",
+            "Волшебное слово", "Баба Яга против"... всех не перечесть... выступления проходили как и в родном Ашкелоне,
+            так и в других городах страны: Бат Яме, Нетании, Петах Тикве, Офаким и др. Со временем город взял над
+            театром шефство. Первая заместитель мэра г.Софа Бейлин добилась для театра постоянного места в Бейт
+            А-Ам.(Здание старенькое, но - настоящий театр: со сценой и занавесом), а потом и статуса Ашкелонский
+            Городской драматический театр "Менора".
           </p>
 
           <!-- </div> -->
@@ -157,17 +157,17 @@
           </div>
           <!-- <h3>Люба Дворкин-Админдиректор</h3> -->
           <p>
-            У Владимира Яковлевича, создателя и хранителя света " МЕНОРЫ", были в жизни две страсти :семья ,любовь всей
-            его жизни , и ...Театр.Профессиональный военный, связист, майор авиационных войск, заведующий Домом
+            У Владимира Яковлевича, создателя и хранителя света "МЕНОРЫ", были в жизни две страсти: семья, любовь всей
+            его жизни, и... Театр. Профессиональный военный, майор авиационных войск, связист, заведующий Домом
             офицеров, организатор гарнизонного театрального кружка... Хоби - фотография и Театр. "Менора" зажженная им в
             городе Ашкелон стала апогеем всей его жизни. В 2018 году по просьбе артистов театру было присвоено его
-            славное имя: Ашкелонский драматический театр " Менора " имени Владимира Азарова.
+            славное имя: Ашкелонский драматический театр "Менора" имени Владимира Азарова.
           </p>
           <p>
             Пролетали годы. Театр жил и работал. И все эти годы рядом с Владимиром Яковлевичем были его артисты, верные
-            друзья и преданные помощники. И , главное, его правая рука ,фундамент , опора и поддержка , артистка и по
+            друзья и преданные помощники. И, главное, его правая рука, фундамент, опора и поддержка, артистка и по
             совместительству <strong>директор Люба Дворкин</strong>. Представляю Вашему вниманию фотографии из архива
-            театра на которых вы можете увидеть и Владимира Яковлевича и Любу Дворкин , и сцены из спектаклей прошлых
+            театра на которых вы можете увидеть и Владимира Яковлевича и Любу Дворкин, и сцены из спектаклей прошлых
             лет.
           </p>
           <!-- </div>
@@ -178,17 +178,17 @@
           <!-- <h3>Ирина Лев-режиссер</h3> -->
           <p>
             <br />
-            Меня зовут <strong>Ирина Лев-режиссер театра</strong>. Я знала Азарова почти 3 десятка лет. Мы встречались
-            на общественны мероприятиях , здоровались. интересовались новостями ... мы не были друзьями , но я всегда
-            испытывала к нему огромное уважение... И.. вот... мне выпала честь сохранить зажженую этим замечательным
-            человеком " Менору" и нести ее свет дальше. Я режиссер по образованию. Закончила Киевский театральный
+            Меня зовут <strong>Ирина Лев-режиссер театра</strong>. Я знала Азарова почти 3десятка лет. Мы встречались на
+            общественны мероприятиях, здоровались. интересовались новостями... мы не были друзьями, но я всегда
+            испытывала к нему огромное уважение... И вот... мне выпала честь сохранить зажженую этим замечательным
+            человеком "Менору" и нести ее свет дальше. Я режиссер по образованию. Закончила Киевский театральный
             институт по специальности режиссура драматического театра и Киевский институт культуры по специализации
-            Методика клубного дела и организации массовых праздников . Всю мою сознательную жизнь ( в том числе и в
-            Израиле! ) я работала в Клубах и Дворцах культуры... Но, признаюсь, трудно было возглавить коллектив ,
-            которым с любовью и добротой 27 лет руководил любимый всеми человек. Надеюсь ,что я справилась. Коллектив не
-            распался, а даже вырос почти в три раза. Нас уже больше сорока человек. За период с февраля 2019 года по сей
-            день театр выпустил 5 спектаклей и Новогодний мюзикл " Приключения мультяшек". У нас теперь есть странички в
-            Фейсбук и ЮТЮБ. И наши спектакли полюбились зрителю. Судить о наших работах предлагаю Вам, дорогие друзья"
+            Методика клубного дела и организации массовых праздников. Всю мою сознательную жизнь (в том числе в
+            Израиле!) я работала в Клубах и Дворцах культуры... Но, признаюсь, трудно было возглавить коллектив, которым
+            с любовью и добротой 27лет руководил любимый всеми человек. Надеюсь, что я справилась. Коллектив не
+            распался, а даже вырос почти в три раза. Нас уже больше сорока человек. За период с февраля 2019г. по сей
+            день театр выпустил 5спектаклей и Новогодний мюзикл "Приключения мультяшек". У нас теперь есть странички в
+            Фейсбук и ЮТЮБ. И наши спектакли полюбились зрителю. Судить о наших работах предлагаю Вам, дорогие друзья.
             Приятного просмотра.
           </p>
         </div>
