адаптация, замена ⯈,youtube

--- a/repertoire.html
+++ b/repertoire.html
@@ -107,7 +107,7 @@
                 </div>
 
                 <div class="magic">
-                  <button type="button" class="social-btn"><span>⯈</span></button>
+                  <button type="button" class="social-btn"><span>▶</span></button>
                 </div>
 
                 <div class="magic">
@@ -176,7 +176,9 @@
                 </div>
                 <!-- &#706; &#60;-->
                 <div class="magic">
-                  <button type="button" class="social-btn"><span>⯈</span></button>
+                  <!-- <button type="button" class="social-btn"><span>⯈</span></button> -->
+                  <button type="button" class="social-btn"><span>▶</span></button>
+                  <!--? &#x25B6; -->
                 </div>
                 <!-- ⯈  &times; ×  -->
                 <div class="magic">
