text .about, troupe

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <div class="video-buttons">
           <div class="btn-container">
             <div class="tooltip glass" style="--dx-tooltip: -16px; --dy-tooltip: -20px">
-              <span>⯈</span> Обращение режиссера театра
+              <span>▶</span> Обращение режиссера театра
             </div>
             <div class="video-button">
               <div class="image-container"></div>
@@ -111,7 +111,7 @@
           </div>
           <div class="btn-container">
             <div class="tooltip glass" style="--dx-tooltip: -16px; --dy-tooltip: -20px">
-              <span>⯈</span> Труппа театра
+              <span>▶</span> Труппа театра
             </div>
             <div class="video-button">
               <div class="image-container"></div>
@@ -128,25 +128,40 @@
             <img src="./troupe/Владимир Азаров-режиссёр.jpg" alt="фото актера" />
           </div>
           <h3>Владимир Яковлевич Азаров - создатель и режиссер театра 1991-2018гг.</h3>
+          <br />
+          <strong>Здравствуйте, дорогие друзья!</strong>
           <p>
             <br />
-            Добрый день, дорогие друзья! Театр драмы и комедии из города Ашкелон, выросший на берегу прекрасного
-            Средиземного моря в самой замечательной и любимой нами стране Израиль, имеет символичное называние "Менора".
-            По еврейской традиции менора - это подсвечник, в котором зажигают праздничные свечи , несущий людям свет. И
-            зажег этот светильник удивительный человек Владимир Яковлевич Азаров, создавший в 1991 году самодеятельный
-            театр, в котором играли потом его ученики, его артисты, его друзья и его птенцы...Владимир Яковлевич был
-            всем: столяром, плотником, маляром, звукооператором, актером и, конечно, режиссером. За 27 лет его службы
-            Мельпомене, "Менора" показал зрителям более 25 спектаклей и, 15 утренников для детей. Долгое время театр
-            работал в крошечном бомбоубежище, куда вплотную набивались зрители. Стал гордостью Ашкелона, нес в народ
-            высокую степень культуры и интеллекта, неоднократно награждался почетными грамотами и заслужил признание
-            публики. Вниманию публики были представлены пьесы русских, израильских и зарубежных авторов: "Три красавицы"
-            (В.Красногоров), "Громкое имя" (Эфраима Кешона), "Восемь любящих женщин" (Робера Тома) и многие другие.
-            Родители и дети спешили на все детские утренники, которые предлагал им театр: "Новогоднюю сказку",
-            "Волшебное слово", "Баба Яга против"... всех не перечесть... выступления проходили как и в родном Ашкелоне,
-            так и в других городах страны: Бат Яме, Нетании, Петах Тикве, Офаким и др. Со временем город взял над
-            театром шефство. Первая заместитель мэра г.Софа Бейлин добилась для театра постоянного места в Бейт
-            А-Ам.(Здание старенькое, но - настоящий театр: со сценой и занавесом), а потом и статуса Ашкелонский
-            Городской драматический театр "Менора".
+            Добро пожаловать в Ашкелонский драматический театр "Менора" — яркую культурную жемчужину, родившуюся на
+            берегу Средиземного моря в прекрасной стране Израиль. Наш театр носит символичное название — "Менора", в
+            честь еврейского семисвечника, который испокон веков несёт свет, тепло и надежду. Именно таким источником
+            света стал театр, основанный в 1991 году вдохновлённым человеком — Владимиром Яковлевичем Азаровым. Он был
+            не просто создателем театра. Владимир Яковлевич был его душой и сердцем: режиссёром, актером, декоратором,
+            звукорежиссёром, плотником, художником — он делал всё сам, с невероятной любовью к делу. <br />
+            У Владимира Азарова было две главные любви в жизни — семья и театр. По образованию военный связист, майор
+            авиационных войск, он организовывал гарнизонные театральные кружки, а его хобби — фотография и сцена — стали
+            судьбой. Его театр стал домом для учеников, друзей и соратников. За 27 лет творческой деятельности театр
+            "Менора" поставил более 25 спектаклей для взрослых и около 15 детских утренников, среди которых:<br />
+          </p>
+          <ul>
+            <li>«Три красавицы» (В. Красногоров)</li>
+            <li>«Громкое имя» (Эфраим Кишон)</li>
+            <li>«Восемь любящих женщин» (Робер Тома) и многие другие.</li>
+          </ul>
+          <p style="text-indent: 0">Родители и дети спешили на все детские утренники, которые предлагал им театр:</p>
+          <ul>
+            <li>«Новогоднюю сказку»</li>
+            <li>«Волшебное слово»</li>
+            <li>«Баба Яга против»... всех не перечесть.</li>
+          </ul>
+          <p>
+            Спектакли проходили не только в Ашкелоне, но и в Бат-Яме, Нетании, Петах-Тикве, Офакиме и других городах
+            Израиля. Поначалу театр размещался в крошечном бомбоубежище, где зрители буквально набивались до отказа. Но
+            несмотря на условия, "Менора" быстро завоевала любовь публики, стала гордостью Ашкелона, носителем культуры,
+            интеллекта и душевного тепла. Театр неоднократно получал почётные грамоты и признание за вклад в развитие
+            культуры. Со временем город взял над театром шефство. Благодаря поддержке первого заместителя мэра Ашкелона
+            Софы Бейлин, театр получил постоянное помещение в здании Бейт А-Ам — пусть старом, но настоящем театре со
+            сценой и занавесом. Позже "Менора" получила официальный статус — Ашкелонский городской драматический театр.
           </p>
 
           <!-- </div> -->
@@ -155,21 +170,23 @@
           <div class="circle circle-right">
             <img src="./troupe/люба_дворкин.jpg" alt="фото актера" />
           </div>
-          <!-- <h3>Люба Дворкин-Админдиректор</h3> -->
+
           <p>
-            У Владимира Яковлевича, создателя и хранителя света "МЕНОРЫ", были в жизни две страсти: семья, любовь всей
-            его жизни, и... Театр. Профессиональный военный, майор авиационных войск, связист, заведующий Домом
-            офицеров, организатор гарнизонного театрального кружка... Хоби - фотография и Театр. "Менора" зажженная им в
-            городе Ашкелон стала апогеем всей его жизни. В 2018 году по просьбе артистов театру было присвоено его
-            славное имя: Ашкелонский драматический театр "Менора" имени Владимира Азарова.
-          </p>
-          <p>
-            Пролетали годы. Театр жил и работал. И все эти годы рядом с Владимиром Яковлевичем были его артисты, верные
+            <!-- Пролетали годы. Театр жил и работал. И все эти годы рядом с Владимиром Яковлевичем были его артисты, верные
             друзья и преданные помощники. И, главное, его правая рука, фундамент, опора и поддержка, артистка и по
             совместительству <strong>директор Люба Дворкин</strong>. Представляю Вашему вниманию фотографии из архива
             театра на которых вы можете увидеть и Владимира Яковлевича и Любу Дворкин, и сцены из спектаклей прошлых
-            лет.
+            лет. <br /> -->
+            В 2018 году, по инициативе артистов, театр получил имя своего основателя — Ашкелонский драматический театр
+            "Менора" имени Владимира Азарова. Все эти годы рядом с Владимиром Яковлевичем были его соратники, ученики и
+            друзья. Особое место среди них занимает <strong>Люба Дворкин</strong> — актриса, верный друг и, по
+            совместительству, директор театра, его опора и движущая сила. Мы с радостью представляем вашему вниманию
+            архивные фотографии, на которых вы увидите сцены из спектаклей, жизнь театра за кулисами, Владимира Азарова
+            и Любу Дворкин — тех, кто зажигал и продолжает нести свет "Меноры".
           </p>
+          <br />
+          <strong>Добро пожаловать в наш театр — здесь всегда горит свет творчества и вдохновения!</strong>
+
           <!-- </div>
           <div class="box-wrape"> -->
           <div class="circle circle-left">
@@ -178,19 +195,24 @@
           <!-- <h3>Ирина Лев-режиссер</h3> -->
           <p>
             <br />
-            Меня зовут <strong>Ирина Лев-режиссер театра</strong>. Я знала Азарова почти 3десятка лет. Мы встречались на
-            общественны мероприятиях, здоровались. интересовались новостями... мы не были друзьями, но я всегда
-            испытывала к нему огромное уважение... И вот... мне выпала честь сохранить зажженую этим замечательным
-            человеком "Менору" и нести ее свет дальше. Я режиссер по образованию. Закончила Киевский театральный
-            институт по специальности режиссура драматического театра и Киевский институт культуры по специализации
-            Методика клубного дела и организации массовых праздников. Всю мою сознательную жизнь (в том числе в
-            Израиле!) я работала в Клубах и Дворцах культуры... Но, признаюсь, трудно было возглавить коллектив, которым
-            с любовью и добротой 27лет руководил любимый всеми человек. Надеюсь, что я справилась. Коллектив не
-            распался, а даже вырос почти в три раза. Нас уже больше сорока человек. За период с февраля 2019г. по сей
-            день театр выпустил 5спектаклей и Новогодний мюзикл "Приключения мультяшек". У нас теперь есть странички в
-            Фейсбук и ЮТЮБ. И наши спектакли полюбились зрителю. Судить о наших работах предлагаю Вам, дорогие друзья.
-            Приятного просмотра.
+            Здравствуйте! Меня зовут <strong>Ирина Лев</strong>, я — режиссёр Ашкелонского драматического театра
+            "Менора". С Владимиром Яковлевичем Азаровым меня связывали почти три десятилетия знакомства. Мы встречались
+            на общественных мероприятиях, обменивались новостями, и хотя мы не были близкими друзьями, я всегда
+            испытывала к нему искреннее уважение. Он был человеком, зажегшим "Менору" — театр, ставший источником света
+            и вдохновения для многих. Сегодня мне выпала честь продолжить его дело и нести этот свет дальше.
           </p>
+          <p>
+            Признаться, было непросто взять на себя руководство театром, которым 27 лет с любовью и преданностью
+            руководил столь уважаемый и любимый человек. Но я надеюсь, что справилась. Самое главное — коллектив не
+            только сохранился, но и вырос почти в три раза. Сегодня в театре более сорока участников. С февраля 2019
+            года мы поставили пять спектаклей, а также праздничный новогодний мюзикл "Приключения мультяшек", который
+            особенно полюбился юным зрителям. У театра появились страницы в Facebook и YouTube, где вы можете найти
+            видео наших постановок, узнать последние новости и ближе познакомиться с жизнью театра. Нас поддерживает
+            публика, и мы с благодарностью принимаем вашу любовь и внимание. Судить о нашей работе — вам, дорогие
+            зрители.
+          </p>
+          <br />
+          <strong>Спасибо, что вы с нами! Приятного просмотра и до встречи в театре!</strong>
         </div>
         <div class="foto-gallery">
           <div class="btn-container">
@@ -261,7 +283,7 @@
               Со спектаклем"Варшавская мелодия"я знакома уже очень давно. Видела его несколько раз в исполнении ведущих
               артистов лучших театров страны. Но этот спектакль ашкелонского театра произвел на меня особое впечатление.
               Удивила искренняя, проникновенная игра актеров, продуманность и слаженность всего хода спектакля. Тонкость
-              режиссерского замысла заставила прочувствовать сегодняшнюю. злободневную актуальность этой пьесы.
+              режиссерского замысла заставила прочувствовать сегодняшнюю злободневную актуальность этой пьесы.
             </p>
           </div>
           <div class="box-wrape glass">
