--- a/troupe.html
+++ b/troupe.html
@@ -94,12 +94,10 @@
             </div>
             <h3>Ирина Лев-режиссер</h3>
             <p>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Commodi optio corporis harum laudantium autem
-              placeat voluptates non unde laborum nam rem sapiente, officia magni amet, ipsam in est expedita ea!Lorem,
-              ipsum dolor sit amet consectetur adipisicing elit. Commodi optio corporis harum laudantium autem placeat
-              voluptates non unde laborum nam rem sapiente, officia magni amet, ipsam in est expedita ea!Lorem, ipsum
-              dolor sit amet consectetur adipisicing elit. Commodi optio corporis harum laudantium autem placeat
-              voluptates non unde laborum nam rem sapiente, officia magni amet, ipsam in est expedita ea!
+              Я профессиональный режиссёр: окончила Киевский театральный институт по специальности «режиссура
+              драматического театра», а также Киевский институт культуры, где изучала методику клубной работы и
+              организацию массовых мероприятий. Всю мою профессиональную жизнь — и в Украине, и в Израиле — я посвятила
+              культуре: работала в клубах, домах культуры, организовывала спектакли, праздники и концерты.
             </p>
           </div>
           <div class="box-wrape">
@@ -112,8 +110,6 @@
               placeat voluptates non unde laborum nam rem sapiente, officia magni amet, ipsam in est expedita ea!Lorem,
               ipsum dolor sit amet consectetur adipisicing elit. Commodi optio corporis harum laudantium autem placeat
               voluptates non unde laborum nam rem sapiente, officia magni amet, ipsam in est expedita ea!Lorem, ipsum
-              dolor sit amet consectetur adipisicing elit. Commodi optio corporis harum laudantium autem placeat
-              voluptates non unde laborum nam rem sapiente, officia magni amet, ipsam in est expedita ea!
             </p>
           </div>
         </div>
