--- a/troupe.html
+++ b/troupe.html
@@ -106,10 +106,9 @@
             </div>
             <h3>Люба Дворкин-Админдиректор</h3>
             <p>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Commodi optio corporis harum laudantium autem
-              placeat voluptates non unde laborum nam rem sapiente, officia magni amet, ipsam in est expedita ea!Lorem,
-              ipsum dolor sit amet consectetur adipisicing elit. Commodi optio corporis harum laudantium autem placeat
-              voluptates non unde laborum nam rem sapiente, officia magni amet, ipsam in est expedita ea!Lorem, ipsum
+              Пролетали годы. Театр жил и работал. И все годы рядом с Владимиром Яковлевичем Азаровым были его артисты,
+              верные друзья и преданные помощники. И, главное, его правая рука, фундамент, опора и движущая сила, актриса и
+              по совместительству директор театра.
             </p>
           </div>
         </div>
