--- a/troupe.html
+++ b/troupe.html
@@ -107,8 +107,8 @@
             <h3>Люба Дворкин-Админдиректор</h3>
             <p>
               Пролетали годы. Театр жил и работал. И все годы рядом с Владимиром Яковлевичем Азаровым были его артисты,
-              верные друзья и преданные помощники. И, главное, его правая рука, фундамент, опора и движущая сила, актриса и
-              по совместительству директор театра.
+              верные друзья и преданные помощники. И, главное, его правая рука, фундамент, опора и поддержка, актриса и,
+              по совместительству, директор театра.
             </p>
           </div>
         </div>
