--- a/index.html
+++ b/index.html
@@ -292,12 +292,12 @@
             </div>
             <h3>Ирина Лев-режиссер</h3>
             <p>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Commodi optio corporis harum laudantium autem
-              placeat voluptates non unde laborum nam rem sapiente, officia magni amet, ipsam in est expedita eaLorem,
-              ipsum dolor sit amet consectetur adipisicing elit. Commodi optio corporis harum laudantium autem placeat
-              voluptates non unde laborum nam rem sapiente, officia magni amet, ipsam in est expedita ea!!Lorem, ipsum
-              dolor sit amet consectetur adipisicing elit. Commodi optio corporis harum laudantium autem placeat
-              voluptates non unde laborum nam rem sapiente, officia magni amet, ipsam in est expedita ea!
+              Трудно в наше сложное время думать и говорить об искусстве,литературе театре.Но упоминание театра
+              "Менора",даже вопреки нашей воле,сразу вызывает массу положительных эмоций. Каждый их спектакль-это
+              честная (от большого до мелочей) работа.Благодаря вкусу и такту в выборе репертуара,в режиссерской
+              работе,игре актеров и усилиям всей труппы создаётся та неповторимая творческая атмосфера, за которую мы
+              любим театр "Менора". И вопреки страдающему миру и злу ,бушующему за окном, театр всегда несёт вечные
+              истины- Добро,Любовь,Веру и Надежду......
             </p>
           </div>
           <div class="box-wrape glass">
@@ -306,12 +306,20 @@
             </div>
             <h3>Ирина Лев-режиссер</h3>
             <p>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Commodi optio corporis harum laudantium autem
-              placeat voluptates non unde laborum nam rem sapiente, officia magni amet, ipsam in est expedita ea!Lorem,
-              ipsum dolor sit amet consectetur adipisicing elit. Commodi optio corporis harum laudantium autem placeat
-              voluptates non unde laborum nam rem sapiente, officia magni amet, ipsam in est expedita ea!Lorem, ipsum
-              dolor sit amet consectetur adipisicing elit. Commodi optio corporis harum laudantium autem placeat
-              voluptates non unde laborum nam rem sapiente, officia magni amet, ipsam in est expedita ea!
+              Местный театр в Израиле, да еще на русском языке, да еще на периферии... Более тридцати лет в Ашкелоне
+              творит театр Менора имени Владимира Азарова. Я побывала на вчерашней премьере " Хочу сниматься в кино" по
+              пьесе Нила Саймона (режиссер - Ирина Лев). Театр хоть и любительский, но в нем все как положено в
+              профессиональных театрах: премьеры, причем по два раза...Благодарные и преданные зрители полностью
+              заполнили небольшой зал Бейт а Ам Ашкелона. В этом зале настоящая сцена, декорации, костюмы, свет, звук...
+              Все, как должно быть. Но главное - сам спектакль, который - удался! Тут совпало все: хорошая пьеса, Нил
+              Саймон - действительно голливудский писатель, сценарист и драматург, и все его пьесы - шлягерные, десятки
+              лет не сходят с подмостков театров всего мира, раз за разом собирая аншлаги. Сюжет прост: каждый ребенок,
+              выросший в неполной семье, в которой родители развелись, мечтает о папе. Но некоторым удается его найти.
+              Даже спустя годы. И вновь влюбить его в себя и самой влюбиться, и если и не стать настоящей семьей, то, по
+              крайней мере, наладить родственные связи. Актеры, особенно исполнительница главной роли, играли
+              потрясающе! Все точно по интонации, движениям, эмоциям!... Опять же, декорации и костюмы поражают! Ну,
+              Театр! А еще видна крепкая профессиональная режиссура Ирины Лев. Аплодисменты! Спасибо от благодарного
+              зрителя Полины Лимперт
             </p>
           </div>
         </div>
